exported interfaces and classes are moved to api and spi directory, also script is moved from api to one level up